# depressed-lang

./: CMakeLists.txt  Readme.md
examples/: addition.dep  function.dep  iteration.deb
include/: calls.h  classes.h  environ.h  error.h  expr.h  func.h  inst.h  intrptr.h  parser.h  resolver.h  return.h  scan.h  stmt.h  token.h
src/: CMakeLists.txt  classes.cpp  error.cpp  func.cpp  inst.cpp  main.cpp  token.cpp
